# opencv_sample

./: CMakeLists.txt  README.md  include.h  main.cpp
